--- a/src/ForeUI/Application/Home/View/default/Public/footer.html
+++ b/src/ForeUI/Application/Home/View/default/Public/footer.html
@@ -1,11 +1,14 @@
+<p></p>
 
-    <!-- 底部
-    ================================================== -->
-    <footer class="footer">
-      <div class="container">
-          <p> 本站由 <strong><a href="http://www.onethink.cn" target="_blank">OneThink</a></strong> 强力驱动</p>
-      </div>
+<div class="container">
+    <!-- FOOTER -->
+    <hr class="featurette-divider">
+    <footer>
+    <p class="pull-right"><a href="#">Back to top</a></p>
+    <p class="text-muted credit">本站由 <a href="http://www.bootcss.com/">Bootstrap</a> 及 <a href="http://www.thinkphp.cn/">ThinkPHP</a> 强力驱动.</p>
     </footer>
+</div>
+
 
 <include file="Public/var"/>
 <block name="script"></block> <!-- 用于加载js代码 -->
@@ -14,3 +17,9 @@
 <div class="hidden"><!-- 用于加载统计代码等隐藏元素 -->
 	<block name="hidden"></block>
 </div>
+
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+<script src="dist/js/bootstrap.min.js"></script>
