--- a/src/ForeUI/Application/Home/View/default/Public/header.html
+++ b/src/ForeUI/Application/Home/View/default/Public/header.html
@@ -1,46 +1,55 @@
 <!-- 导航条
 ================================================== -->
-<taglib name="Think,Article"/>
-<div class="navbar navbar-inverse navbar-fixed-top">
-    <div class="navbar-inner">
-        <div class="container">
-            <a class="brand" href="{:U('index/index')}">OneThink</a>
-            <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <div class="nav-collapse collapse">
-                <ul class="nav">
-                    <think:nav name="nav">
-                        <li>
-                            <a href="{$nav.url|get_nav_url}">{$nav.title}</a>
-                        </li>
-                    </think:nav>
-                </ul>
-            </div>
-            <div class="nav-collapse collapse pull-right">
-                <if condition="is_login()">
-                    <ul class="nav" style="margin-right:0">
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" style="padding-left:0;padding-right:0">{:get_username()} <b class="caret"></b></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="{:U('User/profile')}">修改密码</a></li>
-                                <li><a href="{:U('User/logout')}">退出</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                <else/>
-                    <ul class="nav" style="margin-right:0">
-                        <li>
-                            <a href="{:U('User/login')}">登录</a>
-                        </li>
-                        <li>
-                            <a href="{:U('User/register')}" style="padding-left:0;padding-right:0">注册</a>
-                        </li>
-                    </ul>
-                </if>
-            </div>
-        </div>
-    </div>
-</div>
+<!-- Fixed navbar -->
+ <div class="navbar navbar-inverse navbar-fixed-top">
+   <div class="container">
+     <div class="navbar-header">
+       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+         <span class="icon-bar"></span>
+         <span class="icon-bar"></span>
+         <span class="icon-bar"></span>
+       </button>
+       <a class="navbar-brand" href="#">TAES Bingo!</a>
+     </div>
+     <div class="navbar-collapse collapse">
+       <ul class="nav navbar-nav">
+         <li class="active"><a href="#">Home</a></li>
+         <li><a href="#about">About</a></li>
+         <li><a href="#contact">Contact</a></li>
+         <li class="dropdown">
+           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+           <ul class="dropdown-menu">
+             <li><a href="#">Action</a></li>
+             <li><a href="#">Another action</a></li>
+             <li><a href="#">Something else here</a></li>
+             <li class="divider"></li>
+             <li class="dropdown-header">Nav header</li>
+             <li><a href="#">Separated link</a></li>
+             <li><a href="#">One more separated link</a></li>
+           </ul>
+         </li>
+       </ul>
+       
+       <if condition="is_login()">
+           <ul class="nav navbar-nav navbar-right" style="margin-right:0">
+               <li class="dropdown">
+                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" style="padding-left:0;padding-right:0">{:get_username()} <b class="caret"></b></a>
+                   <ul class="dropdown-menu">
+                       <li><a href="{:U('User/profile')}" style="font-family: '微软雅黑'">修改密码</a></li>
+                       <li><a href="{:U('User/logout')}" style="font-family: '微软雅黑'">退出</a></li>
+                   </ul>
+               </li>
+           </ul>
+       <else/>
+           <ul class="nav navbar-nav navbar-right" style="margin-right:0">
+               <li>
+                   <a href="{:U('User/login')}" style="font-family: '微软雅黑'">登录</a>
+               </li>
+               <li>
+                   <a href="{:U('User/register')}" style="padding-left:0;padding-right:0;font-family: '微软雅黑'">注册</a>
+               </li>
+           </ul>
+       </if>
+     </div><!--/.nav-collapse -->
+   </div><!--container-->
+ </div><!--navbar-->
