修改了一些小细节

--- a/src/ForeUI/Application/Home/View/default/FuncPage/evaluation.html
+++ b/src/ForeUI/Application/Home/View/default/FuncPage/evaluation.html
@@ -6,19 +6,19 @@
             <h1 style="color: #e53333; font-style: normal;font-weight:bold;">Welcome to TAES</h1>
             <p class="lead">Built using Bootstrap</p>
             <ul class="nav nav-pills">
-              <li><a href="{:U('Index/main')}">Home</a></li>
-              <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#"> ALGORITHM DEMO <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="{:U('FuncPage/demo-jd')}" style="font-family: '微软雅黑'">字典序法</a></li>
-                        <li><a href="{:U('FuncPage/demo-zj')}" style="font-family: '微软雅黑'">递增进位制法</a></li>
-                        <li><a href="{:U('FuncPage/demo-jj')}" style="font-family: '微软雅黑'">递减进位制法</a></li>
-                        <li><a href="{:U('FuncPage/demo-lh')}" style="font-family: '微软雅黑'">邻位对换法</a></li>
-                    </ul>
-              </li>
-              <li><a href="{:U('FuncPage/ranking')}">RANKING</a></li>
-              <li class="active"><a href="{:U('FuncPage/evaluation')}">EVALUATION</a></li>
-              <li><a href="{:U('FuncPage/achievement')}">ACHIEVEMENT</a></li>
+	            <li><a href="{:U('Index/main')}">Home</a></li>
+	            <li class="dropdown">
+		             <a class="dropdown-toggle" data-toggle="dropdown" href="#"> ALGORITHM DEMO <span class="caret"></span></a>
+		             <ul class="dropdown-menu">
+		                 <li><a href="{:U('FuncPage/demo-zd')}" style="font-family: '微软雅黑'">字典序法</a></li>
+		                 <li><a href="{:U('FuncPage/demo-zj')}" style="font-family: '微软雅黑'">递增进位制法</a></li>
+		                 <li><a href="{:U('FuncPage/demo-jj')}" style="font-family: '微软雅黑'">递减进位制法</a></li>
+		                 <li><a href="{:U('FuncPage/demo-lh')}" style="font-family: '微软雅黑'">邻位对换法</a></li>
+		             </ul>
+	            </li>
+              	<li><a href="{:U('FuncPage/ranking')}">RANKING</a></li>
+              	<li class="active"><a href="{:U('FuncPage/evaluation')}">EVALUATION</a></li>
+              	<li><a href="{:U('FuncPage/achievement')}">ACHIEVEMENT</a></li>
             </ul>
         </div>
     </header>
