--- a/src/ForeUI/Application/Home/View/default/FuncPage/demo-zj.html
+++ b/src/ForeUI/Application/Home/View/default/FuncPage/demo-zj.html
@@ -10,7 +10,7 @@
               <li class="dropdown active">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#"> ALGORITHM DEMO <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="{:U('FuncPage/demo-jd')}" style="font-family: '微软雅黑'">字典序法</a></li>
+                        <li><a href="{:U('FuncPage/demo-zd')}" style="font-family: '微软雅黑'">字典序法</a></li>
                         <li><a href="{:U('FuncPage/demo-zj')}" style="font-family: '微软雅黑'">递增进位制法</a></li>
                         <li><a href="{:U('FuncPage/demo-jj')}" style="font-family: '微软雅黑'">递减进位制法</a></li>
                         <li><a href="{:U('FuncPage/demo-lh')}" style="font-family: '微软雅黑'">邻位对换法</a></li>
