--- a/src/ForeUI/Application/Home/View/default/Index/main.html
+++ b/src/ForeUI/Application/Home/View/default/Index/main.html
@@ -1,88 +1,6 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <!--<link rel="shortcut icon" href="/docs-assets/ico/favicon.png"> -->
+<extend name="Base/common"/>
 
-    <title>TAES-Tsinghua Algorithm Evaluation System</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="dist/css/bootstrap.css" rel="stylesheet">
-    <!-- Bootstrap theme -->
-    <link href="dist/css/bootstrap-theme.min.css" rel="stylesheet">
-    <!-- Custom styles for this template -->
-    <link href="css/theme.css" rel="stylesheet">
-    <link href="css/signin.css" rel="stylesheet">
-    <link href="carousel.css" rel="stylesheet">
-    <!-- Just for debugging purposes. Don't actually copy this line! -->
-    <!--[if lt IE 9]><script src="{{ page.base_url }}docs-assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->
-  </head>
-
-  <body>
-    <!-- Fixed navbar -->
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">TAES Bingo!</a>
-        </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li class="divider"></li>
-                <li class="dropdown-header">Nav header</li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
-              </ul>
-            </li>
-          </ul>
-          
-          <if condition="is_login()">
-              <ul class="nav navbar-nav navbar-right" style="margin-right:0">
-                  <li class="dropdown">
-                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" style="padding-left:0;padding-right:0">{:get_username()} <b class="caret"></b></a>
-                      <ul class="dropdown-menu">
-                          <li><a href="{:U('User/profile')}" style="font-family: '微软雅黑'">修改密码</a></li>
-                          <li><a href="{:U('User/logout')}" style="font-family: '微软雅黑'">退出</a></li>
-                      </ul>
-                  </li>
-              </ul>
-          <else/>
-              <ul class="nav navbar-nav navbar-right" style="margin-right:0">
-                  <li>
-                      <a href="{:U('User/login')}" style="font-family: '微软雅黑'">登录</a>
-                  </li>
-                  <li>
-                      <a href="{:U('User/register')}" style="padding-left:0;padding-right:0;font-family: '微软雅黑'">注册</a>
-                  </li>
-              </ul>
-          </if>
-        </div><!--/.nav-collapse -->
-      </div><!--container-->
-    </div><!--navbar-->
-  
-	   
+<block name="header">
     <header class="jumbotron subhead" id="overview">
         <div class="container">
             <h1 style="color: #e53333; font-style: normal;font-weight:bold;">Welcome to TAES</h1>
@@ -92,7 +10,7 @@
               <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#"> ALGORITHM DEMO <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="{:U('FuncPage/demo-jd')}" style="font-family: '微软雅黑'">字典序法</a></li>
+                        <li><a href="{:U('FuncPage/demo-zd')}" style="font-family: '微软雅黑'">字典序法</a></li>
                         <li><a href="{:U('FuncPage/demo-zj')}" style="font-family: '微软雅黑'">递增进位制法</a></li>
                         <li><a href="{:U('FuncPage/demo-jj')}" style="font-family: '微软雅黑'">递减进位制法</a></li>
                         <li><a href="{:U('FuncPage/demo-lh')}" style="font-family: '微软雅黑'">邻位对换法</a></li>
@@ -104,9 +22,10 @@
             </ul>
         </div>
     </header>
-
-
-	    <!-- Carousel
+</block>
+ 
+<block name="body">
+ 	    <!-- Carousel
     ================================================== -->
 	<div class="container">
 		<div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -191,11 +110,8 @@
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
 
-
       <!-- START THE FEATURETTES -->
-
       <hr class="featurette-divider">
-
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
@@ -205,25 +121,9 @@
           <img class="featurette-image img-responsive" src="data:image/png;base64," data-src="holder.js/500x500/auto" alt="Generic placeholder image">
         </div>
       </div>
-
       <hr class="featurette-divider">
-
       <!-- /END THE FEATURETTES -->
-
-
-      <!-- FOOTER -->
-      <footer>
-        <p class="pull-right"><a href="#">Back to top</a></p>
-    	<p class="text-muted credit">本站由 <a href="http://www.bootcss.com/">Bootstrap</a> 及 <a href="http://www.thinkphp.cn/">ThinkPHP</a> 强力驱动.</p>
-      </footer>
-
+      
     </div><!-- /.container -->
-	
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="dist/js/bootstrap.min.js"></script>
-    <script src="js/holder.js"></script>
-  </body>
-</html>
+</block>
+
