--- a/src/ForeUI/Application/Home/View/default/Public/header.html
+++ b/src/ForeUI/Application/Home/View/default/Public/header.html
@@ -9,7 +9,7 @@
          <span class="icon-bar"></span>
          <span class="icon-bar"></span>
        </button>
-       <a class="navbar-brand" href="#">TAES Bingo!</a>
+       <a class="navbar-brand" href="{:U('Index/main')}">TAES Bingo!</a>
      </div>
      <div class="navbar-collapse collapse">
        <ul class="nav navbar-nav">
