--- a/src/ForeUI/Application/Home/View/default/FuncPage/demo-zd.html
+++ b/src/ForeUI/Application/Home/View/default/FuncPage/demo-zd.html
@@ -25,5 +25,67 @@
 </block>
 
 <block name="body">
+	<div class="container marketing">
+		<h1 style="font-family: '微软雅黑'">字典序法</h2>
+		<hr class="featurette-divider">
+		
+		<!-- START THE FEATURETTES -->
+	    <div class="row featurette">
+			<div class="col-md-7">
+				<h2 class="featurette-heading" style="font-family: '微软雅黑'">下一个排列数</h2>
+				<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+			</div>
+			<div class="col-md-5">
+				<iframe src="./Animation/zd1/index.html"  width="480" height="320" frameborder="no" border="0" marginwidth="0" marginheight="0" scrolling="no"></iframe>
+				<!-- <img class="featurette-image img-responsive" src="data:image/png;base64," data-src="holder.js/480x320/auto" alt="Generic placeholder image"> -->
+				
+			</div>
+	    </div>
+	    <hr class="featurette-divider">
+	    
+	    <div class="row featurette">
+			<div class="col-md-7">
+				<h2 class="featurette-heading" style="font-family: '微软雅黑'">排列数到中介数（and 序号）</h2>
+				<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+			</div>
+			<div class="col-md-5">
+				<img class="featurette-image img-responsive" src="data:image/png;base64," data-src="holder.js/480x320/auto" alt="Generic placeholder image">
+			</div>
+	    </div>
+	    <hr class="featurette-divider">
+	    
+	    <div class="row featurette">
+			<div class="col-md-7">
+				<h2 class="featurette-heading" style="font-family: '微软雅黑'">中介数到排列数</h2>
+				<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+			</div>
+			<div class="col-md-5">
+				<img class="featurette-image img-responsive" src="data:image/png;base64," data-src="holder.js/480x320/auto" alt="Generic placeholder image">
+			</div>
+	    </div>
+	    <hr class="featurette-divider">
+	    
+	    <div class="row featurette">
+			<div class="col-md-7">
+				<h2 class="featurette-heading" style="font-family: '微软雅黑'">序号到中介数</h2>
+				<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+			</div>
+			<div class="col-md-5">
+				<img class="featurette-image img-responsive" src="data:image/png;base64," data-src="holder.js/480x320/auto" alt="Generic placeholder image">
+			</div>
+	    </div>
+	    <hr class="featurette-divider">
+	    
+		<div class="row featurette">
+			<div class="col-md-7">
+				<h2 class="featurette-heading" style="font-family: '微软雅黑'">中介数到序号</h2>
+				<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+			</div>
+			<div class="col-md-5">
+				<img class="featurette-image img-responsive" src="data:image/png;base64," data-src="holder.js/480x320/auto" alt="Generic placeholder image">
+			</div>
+	    </div>
+      	<!-- /END THE FEATURETTES -->
+	</div>
 
 </block>
