--- a/src/ForeUI/Application/Home/View/default/Index/main.html
+++ b/src/ForeUI/Application/Home/View/default/Index/main.html
@@ -40,8 +40,8 @@
           <img src="img/1.jpg" alt="First slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Example headline.</h1>
-              <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
+              <h1 style="font-family: '微软雅黑'">算法演示</h1>
+              <p style="font-family: '微软雅黑'">提供字典序法、递增进位法、递减进位法、邻位对换法四种算法的过程演示，帮助您对排列生成算法有更深入的理解.</p>
               <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
             </div>
           </div>
@@ -50,8 +50,8 @@
           <img src="img/2.jpg" alt="Second slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Another example headline.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <h1 style="font-family: '微软雅黑'">算法评估</h1>
+              <p style="font-family: '微软雅黑'">从空间、时间、结果的角度全方位评测算法，给出详细的运算结果对比.</p>
               <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
             </div>
           </div>
@@ -60,8 +60,8 @@
           <img src="img/3.jpg" alt="Third slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>One more for good measure.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <h1 style="font-family: '微软雅黑'">算法排名</h1>
+              <p style="font-family: '微软雅黑'">针对不同的排列生成算法，提供在排列数的复杂度不同的情况下算法的运行效率变化.</p>
               <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
             </div>
           </div>
