--- a/src/ForeUI/Application/Home/View/default/FuncPage/demo-zd.html
+++ b/src/ForeUI/Application/Home/View/default/FuncPage/demo-zd.html
@@ -59,7 +59,7 @@
 				<p class="lead">中介数：72642321</p>
 			</div>
 			<div class="col-md-5">
-				<img class="featurette-image img-responsive" src="data:image/png;base64," data-src="holder.js/480x320/auto" alt="Generic placeholder image">
+				<iframe src="./Animation/zd2/index.html"  width="480" height="320" frameborder="no" border="0" marginwidth="0" marginheight="0" scrolling="no"></iframe>
 			</div>
 	    </div>
 	    <hr class="featurette-divider">
