add paste support

--- a/src/ForeUI/Application/Home/View/default/FuncPage/evaluation.html
+++ b/src/ForeUI/Application/Home/View/default/FuncPage/evaluation.html
@@ -33,7 +33,7 @@
 
 	<div class="container">
 		<form class="form" action="__URL__/upload_file" method="post" enctype="multipart/form-data">
-		  	<textarea class="form-control" rows="20"></textarea>
+		  	<textarea class="form-control" rows="20" name="textupl"></textarea>
 		  	<div class="form-group">
 		    	<label for="exampleInputFile">File input</label>
 		    	<input type="file" name="file" id="file" />
