correct mem calc

--- a/src/ForeUI/Application/Home/View/default/FuncPage/ranking.html
+++ b/src/ForeUI/Application/Home/View/default/FuncPage/ranking.html
@@ -30,14 +30,14 @@
 	if(! $con)
 		die("could not connect：" . mysql_error());
 	mysql_select_db("judge",$con);
-	$result = mysql_query("SELECT * FROM judge ORDER by time ASC, mem ASC, runid DESC",$con);
-	echo "<table border='1' width='1200'>
+	$result = mysql_query("SELECT * FROM judge ORDER by time ASC, mem ASC, runid DESC LIMIT 10",$con);
+	echo "<table class='table table-hover table-striped'>
 	<tr>
-	<th>runid</th>
-	<th>usr</th>
-	<th>ret</th>
-	<th>time</th>
-	<th>mem</th>
+	<th class='text-center'>runid</th>
+	<th class='text-center'>usr</th>
+	<th class='text-center'>ret</th>
+	<th class='text-center'>time</th>
+	<th class='text-center'>mem</th>
 	</tr>";
 	while($row = mysql_fetch_array($result))
 	if($row['compilecode']==0&&
@@ -80,5 +80,6 @@
 		echo "<td>".$row['mem']."KB</td>";
 		echo "</tr>";
 	}
+	echo "</table>";
 	?>
 </block>
