--- a/src/ForeUI/Application/Home/View/default/FuncPage/lastresult.html
+++ b/src/ForeUI/Application/Home/View/default/FuncPage/lastresult.html
@@ -38,59 +38,51 @@
 			die("could not connect：" . mysql_error());
 		mysql_select_db("judge",$con);
 		$result = mysql_query("SELECT * FROM judge ORDER by runid DESC",$con);
-		echo "<table border='1' width='1200'>
+		echo "<table class='table table-hover table-striped'>
 		<tr>
-		<th>runid</th>
-		<th>usr</th>
-		<th>ret</th>
-		<th>time</th>
-		<th>mem</th>
+		<th class='text-center'>runid</th>
+		<th class='text-center'>usr</th>
+		<th class='text-center'>ret</th>
+		<th class='text-center'>time</th>
+		<th class='text-center'>mem</th>
 		</tr>";
 		while($row = mysql_fetch_array($result))
 		{
 			echo "<tr align='center'>";
 			echo "<td>".$row['runid']."</td>";
 			echo "<td>"."test name"."</td>";
-			echo "<td>";
+			echo "<td";
 			if($row['compilecode']!=0){
-				echo "Compile Error";
+				echo " class='lable lable-danger'>Compile Error";
 			}
 			else if($row['RE']!=0){
-				echo "Runtime Error";
+				echo " class='danger'>Runtime Error";
 			}
 			else if($row['TLE']!=0){
-				echo "Time Limit Extend";
+				echo " class='warning'>Time Limit Extend";
 			}
 			else if($row['MLE']!=0){
-				echo "Memory Limit Extend";
+				echo " class='warning'>Memory Limit Extend";
 			}
 			else if ($row['judgercorrect']!=0){
 				if($row['judgererrtype']==1){
-					echo "Less Result";
+					echo " class='danger'>Less Result";
 				}
 				else if ($row['judgererrtype']==2){
-					echo "Dumplicate Result";
+					echo " class='danger'>Dumplicate Result";
 				}
 				else{
-					echo "Seqence Error";
+					echo " class='danger'>Seqence Error";
 				}
 			}
 			else {
-				echo "Perfect Code";
+				echo " class='success'><span class='glyphicon glyphicon-thumbs-up'></span> Perfect Code";
 			}
 			echo "</td>";
 			echo "<td>".$row['time']."ms</td>";
 			echo "<td>".$row['mem']."KB</td>";
 			echo "</tr>";
 		}
-		else {
-			echo "Perfect Code";
-		}
-		echo "</td>";
-		echo "<td>".$row['time']."ms</td>";
-		echo "<td>".$row['mem']."KB</td>";
-		echo "</tr>";
-	}
 echo "</table>";
 ?>
 </div>
