修改主页英文

--- a/src/ForeUI/Application/Home/View/default/Index/main.html
+++ b/src/ForeUI/Application/Home/View/default/Index/main.html
@@ -87,25 +87,25 @@
         <div class="col-lg-3">
           <img class="img-responsive" src="img/demo.jpg" alt="Generic placeholder image">
           <h2 style="font-family: '微软雅黑'">演示</h2>
-          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+          <p>本系统的演示模块以文字描述及动画的形式，将几种经典的全排列生成算法进行剖析，讲解排列数、中介数、序号之间的相互转换过程.</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-3">
           <img class="img-responsive" src="img/rank.jpg" alt="Generic placeholder image">
           <h2 style="font-family: '微软雅黑'">排行</h2>
-          <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+          <p>本系统的排行模块用来展示各种经典算法在不同位数的情况下具有怎样的运行效率，同时将用户提交的算法按照运行时间、所需内存进行从小到大的排序.</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-3">
           <img class="img-responsive" src="img/check.jpg" alt="Generic placeholder image">
           <h2 style="font-family: '微软雅黑'">评测</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+          <p>本系统的评测模块允许用户提交代码文本或代码文件，上传成功后通过tab页面可以看到所有提交的评测结果.本系统不仅能够分析结果的正确性，同时可以检测出是否重复、遗漏、增加的问题.</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-3">
           <img class="img-responsive" src="img/achieve.jpg" alt="Generic placeholder image">
           <h2 style="font-family: '微软雅黑'">成就</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+          <p>本系统的成就模块用以展示用户所有提交正确的算法的全站排名，同时给出所有用户提交结果的宏观分析.</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
@@ -114,8 +114,8 @@
       <hr class="featurette-divider">
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading" style="font-family: '微软雅黑'">算法演示  <span class="text-muted">便于更好地理解.</span></h2>
+          <p class="lead">采用CSS及Javascript的动画脚本代替以往的Flash影片，依靠SenchaAnimator可以做出各种各样内容丰富的交互演示.</p>
         </div>
         <div class="col-md-5">
           <img class="featurette-image img-responsive" src="img/main-ys.jpg" alt="Generic placeholder image">
